--- a/style/less/cards.less
+++ b/style/less/cards.less
@@ -7,6 +7,9 @@
 @card-preview-factor: 0.5;
 @card-header-height: 40px;
 
+@card-front-body-height:135px;
+@card-front-body-width:145px;
+
 .card {
 
   font-family: Helvetica, Arial, sans-serif;
@@ -69,7 +72,7 @@
         font-weight: bold;
         display: block;
         margin-left: 8px;
-        padding-top: 8px;        
+        padding-top: 8px;
     }
 
     h1{
@@ -571,11 +574,10 @@ li.delimiter-value {
 .front {
 
     .m2m-card-text {
-        position: absolute;
-        top: 0px;
-        left: 32px;
-        right: 32px;
-        bottom: 0px;
+        height: @card-front-body-height;
+        width: @card-front-body-width;
+        display:table-cell;
+        vertical-align:middle;
 
         &::before {
             content: '';
@@ -617,11 +619,10 @@ li.delimiter-value {
     }
 
     .m2m-card-quantity {
-        position: absolute;
-        top: 0px;
-        left: 10px;
-        right: 10px;
-        bottom: 0px;
+        height: @card-front-body-height;
+        width: @card-front-body-width;
+        display:table-cell;
+        vertical-align:middle;
 
         &::before {
             content: '';
